--- a/about-us.html
+++ b/about-us.html
@@ -308,7 +308,7 @@
 
         <!--== Start Header Wrapper ==-->
         <header class="header-area sticky-header header-transparent">
-            <div class="container">
+            <div class="container p-3">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-5 col-lg-3 col-xl-3 p-0 ps-2">
                         <div class="header-logo">
@@ -319,12 +319,12 @@
                     </div>
                     <div class="col-lg-5 col-xl-5" style="display: none;">
                         <div class="header-navigation">
-                            <ul class="main-nav justify-content-start">
-                                <li><a href="about-us.html">Conocenos</a></li>
-                                <li><a class="text-nowrap" href="product.html">Beneficios Exclusivos</a></li>
-                                <li><a href="testimonials.html">Testimonios</a></li>
-                                <li><a href="contact.html">Contáctanos</a></li>
-                            </ul>
+                            <div class="main-nav justify-content-center flex justify-content-center" style="font-size: 20px; margin: auto;  gap: 10px;">
+                                <a class="fw-bold m-auto" href="about-us.html">Conocenos</a>
+                                <a class="fw-bold m-auto text-nowrap" href="product.html">Beneficios Exclusivos</a>
+                                <a class="fw-bold m-auto" href="testimonials.html">Testimonios</a>
+                                <a class="fw-bold m-auto" href="contact.html">Contáctanos</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-7 col-lg-4 col-xl-4">
@@ -415,22 +415,22 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide brand-logo-item">
                                 <!--== Start Brand Logo Item ==-->
-                                <img src="assets/images/Fotos-Website-prueba/Doctora.jpg" width="200" height="110" alt="Image-HasTech">
+                                <img src="assets/images/Fotos-Website-prueba/1.jpg" width="200" height="110" alt="Image-HasTech">
                                 <!--== End Brand Logo Item ==-->
                             </div>
                             <div class="swiper-slide brand-logo-item">
                                 <!--== Start Brand Logo Item ==-->
-                                <img src="assets/images/Fotos-Website-prueba/pexels-gustavo-fring-3985319.jpg" width="200" height="110" alt="Image-HasTech">
+                                <img src="assets/images/Fotos-Website-prueba/2.jpg" width="200" height="110" alt="Image-HasTech">
                                 <!--== End Brand Logo Item ==-->
                             </div>
                             <div class="swiper-slide brand-logo-item">
                                 <!--== Start Brand Logo Item ==-->
-                                <img src="assets/images/Fotos-Website-prueba/pexels-gustavo-fring-3985332.jpg" width="200" height="110" alt="Image-HasTech">
+                                <img src="assets/images/Fotos-Website-prueba/3.jpg" width="200" height="110" alt="Image-HasTech">
                                 <!--== End Brand Logo Item ==-->
                             </div>
                             <div class="swiper-slide brand-logo-item">
                                 <!--== Start Brand Logo Item ==-->
-                                <img src="assets/images/Fotos-Website-prueba/pexels-shiny-diamond-3762399.jpg" width="200" height="110" alt="Image-HasTech">
+                                <img src="assets/images/Fotos-Website-prueba/4.jpg" width="200" height="110" alt="Image-HasTech">
                                 <!--== End Brand Logo Item ==-->
                             </div>
                         </div>
@@ -444,7 +444,8 @@
                 <div class="container">
                     <div class="about-content">
                         <h2 class="title">Nuestra Misión</h2>
-                        <p class="desc">En Bella, nos dedicamos a transformar la manera en que las personas acceden a procedimientos estéticos de alta calidad. Conectamos a pacientes con cirujanos plásticos certificados, ofreciendo beneficios exclusivos y garantizando la más alta calidad en cada procedimiento.</p>
+                        <p class="desc">En BELLA, redefinimos el acceso a procedimientos estéticos de alta calidad, conectando a nuestros pacientes con cirujanos plásticos certificados y ofreciendo beneficios exclusivos que aseguran resultados excepcionales y transformadores.
+                        </p>
                     </div>
                 </div>
             </section>
@@ -460,9 +461,9 @@
                                     <div class="icon" style="color: white; font-size: 28px; background-color: #27222C; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
                                         <i class="fa fa-clock-o"></i>
                                     </div>
-                                    Soporte 24/7
+                                    Guía de Cirugía Plástica
                                 </h5>
-                                <p class="desc" style="color: #666; margin-top: 15px; margin-left: 75px;">Nuestro equipo está disponible en todo momento para atender tus consultas y necesidades.</p>
+                                <p class="desc" style="color: #666; margin-top: 15px; margin-left: 75px;">Acompañamiento experto en cada etapa de tu transformación.</p>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-4 mb-8">
@@ -473,7 +474,7 @@
                                     </div>
                                     Certificaciones
                                 </h5>
-                                <p class="desc" style="color: #666; margin-top: 15px; margin-left: 75px;">Trabajamos exclusivamente con cirujanos certificados y clínicas acreditadas.</p>
+                                <p class="desc" style="color: #666; margin-top: 15px; margin-left: 75px;">Colaboramos con cirujanos plásticos certificados y clínicas de prestigio internacional, garantizando excelencia y seguridad en cada procedimiento.</p>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-4 mb-8">
@@ -484,7 +485,8 @@
                                     </div>
                                     Beneficios Exclusivos
                                 </h5>
-                                <p class="desc" style="color: #666; margin-top: 15px; margin-left: 75px;">Accede a descuentos especiales y promociones únicas en procedimientos estéticos.</p>
+                                <p class="desc" style="color: #666; margin-top: 15px; margin-left: 75px;">Disfruta de descuentos especiales y ventajas únicas en procedimientos estéticos, solo para ti.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -497,7 +499,8 @@
                 <div class="container">
                     <div class="section-title text-center mb-5">
                         <h2 class="title">Entidades que nos Respaldan</h2>
-                        <p>Certificaciones y asociaciones que garantizan nuestra calidad</p>
+                        <p>Certificaciones y alianzas de prestigio que avalan nuestra calidad y excelencia.
+                        </p>
                     </div>
                     <div class="row g-4">
                         <div class="col-md-4">
@@ -617,8 +620,7 @@
                             <div class="widget-item">
                                 <h4 class="widget-title">Redes Sociales</h4>
                                 <div class="widget-social">
-                                    <a href="https://twitter.com/" target="_blank" rel="noopener"><i
-                                            class="fa fa-twitter"></i></a>
+                                
                                     <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
                                             class="fa fa-facebook"></i></a>
                                     <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i
