--- a/politicsAndPrivacid.html
+++ b/politicsAndPrivacid.html
@@ -180,7 +180,7 @@
     <div class="wrapper">
         <!--== Start Header Wrapper ==-->
         <header class="header-area sticky-header header-transparent">
-            <div class="container">
+            <div class="container p-3">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-5 col-lg-3 col-xl-3 p-0 ps-2">
                         <div class="header-logo">
@@ -191,12 +191,12 @@
                     </div>
                     <div class="col-lg-5 col-xl-5" style="display: none;">
                         <div class="header-navigation">
-                            <ul class="main-nav justify-content-start">
-                                <li><a href="about-us.html">Conocenos</a></li>
-                                <li><a class="text-nowrap" href="product.html">Beneficios Exclusivos</a></li>
-                                <li><a href="testimonials.html">Testimonios</a></li>
-                                <li><a href="contact.html">Contáctanos</a></li>
-                            </ul>
+                            <div class="main-nav justify-content-center flex justify-content-center" style="font-size: 20px; margin: auto;  gap: 10px;">
+                                <a class="fw-bold m-auto" href="about-us.html">Conocenos</a>
+                                <a class="fw-bold m-auto text-nowrap" href="product.html">Beneficios Exclusivos</a>
+                                <a class="fw-bold m-auto" href="testimonials.html">Testimonios</a>
+                                <a class="fw-bold m-auto" href="contact.html">Contáctanos</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-7 col-lg-4 col-xl-4">
@@ -360,8 +360,7 @@
                             <div class="widget-item">
                                 <h4 class="widget-title">Redes Sociales</h4>
                                 <div class="widget-social">
-                                    <a href="https://twitter.com/" target="_blank" rel="noopener"><i
-                                            class="fa fa-twitter"></i></a>
+                                   
                                     <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
                                             class="fa fa-facebook"></i></a>
                                     <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i
