imagenes no se muestran

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/8.jpg alt="Cirugía Corporal" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/8.jpg" alt="Cirugía Corporal" class="rounded-4 mb-4">
                                 <h4>Cirugía Corporal</h4>
                                 <p>Especialistas en lipoescultura, abdominoplastia, aumento de glúteos, contorno corporal y más. Transforma tu cuerpo con resultados naturales y una silueta definida que resalta tu confianza.
                                 </p>
