--- a/product.html
+++ b/product.html
@@ -420,7 +420,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-5069609 (1).jpg" alt="Cirugía Mamaria" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/8.jpg" alt="Cirugía Mamaria" class="rounded-4 mb-4">
                                 <h4>Cirugía Mamaria</h4>
                                 <p>Especialistas en aumento, reducción y levantamiento de senos con resultados
                                     naturales.</p>
